themes/sam/sass/style.sass
@import "vars"
@import "mixins"

*
    margin: 0
    padding: 0
    -webkit-box-sizing: border-box
    box-sizing: border-box

html
    background-color: $body-background
    font-family: $font
    font-size: 16px

body
    font-size: $body-size
    font-family: $font
    color: $body-text
    //line-height: 2rem
    line-height: 1.414em
    //letter-spacing: 1.5px
    text-shadow: none
    display: flex
    flex-direction: column
    justify-content: space-between
    align-items: center
    opacity: 1

h1,h2,h3
    margin-bottom: 0.5em
    text-align: center
    font-family: $font
    opacity: 0.8

li
    opacity: 0.8
    & a
        opacity: 0.9

ul
    list-style-type: none

p
    display: inline
    opacity: 0.8

a
    color: $links
    text-decoration: none
    border-bottom: 2px solid $links
    +ease(0.5s)
    &:hover
        color: $links-hover
        font-style: none
    &:active
        color: $links

button
    padding: 20px
    border: 0px
    border-radius: 5px
    background: $light
    &:hover
        box-shadow: 5px 5px $dark

hr
    +skinny-hr
    opacity: 0.3

.wrap
    margin: 0 auto
    margin-top: 6rem
    width: 45%
    @media screen and (max-width: 736px)
        padding: 1rem
        width: 100%

.tag-container
    display: flex
    flex-direction: row
    justify-content: flex-start
    align-items: center

.tag
    background-color: transparent
    position: relative
    bottom: 0

.section
    display: flex
    flex-direction: column
    justify-content: center
    align-items: flex-start

.bottom-menu
    display: flex
    flex-direction: column
    justify-content: center
    align-items: center
    padding-top: 3rem
    text-align: center

.footer, header
    width: 100%
    display: flex
    justify-content: center
    align-items: center
    text-align: center
    background-color: transparent
    position: relative
    bottom: 0
    padding: 3rem 1rem
    font-family: $font
    font-size: 1rem
    line-height: 1em
    opacity: 0.8
    a
        border-bottom: none
        display: contents

header
  padding: 0
  justify-content: left
  align-items: left
  text-align: left
  a
      border-bottom: none

section.post-footer
	padding-top: 1rem
	>img.profileImage
		display: inline-block
		margin: 0
		margin-right: 1rem
		border-radius: 50%
		width: 10%
		vertical-align: top
		box-shadow: 0 2px 5px $dark-secondary
	>section
		display: inline-block
		font-size: 0.8em
		line-height: 1.41em
		width: 85%
		vertical-align: top

@import "elements"

// Helpers

.go-left
    justify-content: flex-start
    align-items: flex-start

.go-right
    justify-content: flex-end
    align-items: flex-end

.go-center
    justify-content: center
    align-items: center

// asciidoctor

#content ol.loweralpha
  list-style-type: lower-alpha

#content div.admonitionblock
  width: auto
  font-size: 0.9em
  table td
      border: none
      //background: $light-secondary
      padding: 0.3em
      padding-top: 1em
      padding-bottom: 1em
      vertical-align: top
      text-align: left
  table td.icon
      font-weight: 700
      border-right: solid 0.5em $dark-secondary
      border-left: solid 1px $dark-secondary
      padding-right: 1em
      padding-left: 1em
      background-color: rgba($light-secondary, 0.4)
  .icon>.title
      margin-bottom: 0
  table td.content
      padding-left: 2em
      padding-right: 2em
      background: rgba($light-secondary, 0.3)

#content div.note
  table td.icon
    $thisColor: gold
    border-color: $thisColor
    background-color: rgba($thisColor, 0.4)
#content div.warning
  table td.icon
    $thisColor: red
    border-color: $thisColor
    background-color: rgba($thisColor, 0.4)
#content div.tip
  table td.icon
    $thisColor: #229954
    border-color: $thisColor
    background-color: rgba($thisColor, 0.4)


#content .content>pre
  color: $light
   
#content .content>pre.highlight
  color: $light
  code>table
    margin: 0
    border: none
    td
      border: none
    td.linenos
      $thisColor: darken($light, 40%) 
      color: $thisColor
      border-right: 1px solid $thisColor
      text-align: right
    td.code
      padding-left: 1em
      text-align: left
  .linenodiv
    margin-bottom: 0
  
#content 
  code
    //white-space: pre
    margin: 0 0.2em
    padding: 0 0.3em
  code[data-lang]
    margin: 0
    padding: 0

.headerDescription
  & h1,h2,h3
    text-align: left

#content .content code pre
  padding: 0 

#content .imageblock
  img
    margin: 0
  .content+.title
    //margin-top: -0.3em

span.linethrough
  text-decoration: line-through

